--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>oneguoweb</title>
+
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/swiper.min.css">
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but oneguoweb doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+
+    <script src="<%= BASE_URL %>js/jquery.min.js"></script>
+    <script src="<%= BASE_URL %>js/bootstrap.min.js"></script>
+    <script src="<%= BASE_URL %>js/swiper.min.js"></script>
+
   </body>
 </html>
